welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:5: error: not found: value baisserBrosse
  baisserBrosse()
  ^PictureMono1:6: error: not found: value leverBrosse
  leverBrosse()
  ^PictureMono1:10: error: not found: value baisserBrosse
  baisserBrosse()
  ^PictureMono1:11: error: not found: value leverBrosse
  leverBrosse()
  ^PictureMono1:15: error: not found: value baisserBrosse
  baisserBrosse()
  ^PictureMono1:16: error: not found: value leverBrosse
  leverBrosse()
  ^PictureMono1:19: error: not found: value nbCotes
nbCotes = 0
^PictureMono1:20: error: not found: value nbCotes
while(nbCotes < 4){
      ^