welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
override def run() {
}

def faireV(){
  baisserBrosse()
  leverBrosse()
  avance()
  gauche()
  avance()
  baisserBrosse()
  leverBrosse()
  recule()
  droite()
  avance()
  baisserBrosse()
  leverBrosse()
}

nbCotes = 0
while(nbCotes < 4){
  avance(); avance()
  faireV()
  avance(); avance(); gauche()
}